<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginActivity">



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/email_login_button"
            android:textColor="@color/colorAccent"
            android:text="@string/login_text"
            android:onClick="login"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/make_account_button"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up_text"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:onClick="makeAcct"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>